modules/gdscript/tests/scripts/analyzer/errors/nullable_class_member.gd
var foo: String? = null


func test():
    print(foo.begins_with("")) # Should error